--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.3.1",
+    "firebase-admin": "^11.10.1",
     "jquery": "^3.7.0",
     "jquery.terminal": "^2.37.1",
     "node": "^20.5.1",
